# longchain-meeting-minutes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
samples/: done_text.json  family_care_done_text.json  speaker_transcript.json
src/meeting_minutes_agent/: __init__.py  __main__.py  chains.py  cli.py  config.py  llm.py  models.py  service.py  transcript.py
tests/: test_chains.py  test_cli.py  test_config.py  test_docker_files.py  test_progress.py  test_service.py  test_transcript.py
